# zfs

./: META  Makefile.am  README.md
.github/workflows/: checkstyle.yaml  codeql.yml  smatch.yml  unit-tests.yml  zfs-arm.yml  zfs-qemu-packages.yml  zfs-qemu.yml  zloop.yml
.github/workflows/scripts/: qemu-2-start.sh  qemu-3-deps.sh  qemu-4-build-vm.sh  qemu-4-build.sh  (+3 more)
cmd/: Makefile.am  arc_summary  arcstat.in  zilstat.in
cmd/zdb/: zdb.c
cmd/zfs/: zfs_main.c
cmd/zpool/: zpool_vdev.c
cmd/zstream/: zstream_decompress.c  zstream_recompress.c
config/: always-compiler-options.m4  kernel.m4  user.m4  zfs-build.m4
contrib/: Makefile.am
contrib/macOS/: Makefile.am  uninstall-openzfsonosx.sh
include/: libzfs.h
include/sys/: dnode.h  spa.h  spa_impl.h  zfs_bootenv.h  zfs_context.h  zfs_debug.h  zfs_file.h  zio.h
lib/: Makefile.am
lib/libnvpair/: Makefile.am
lib/libspl/: Makefile.am  tunables.c
lib/libzfs/: Makefile.am  libzfs.abi  libzfs_crypto.c  libzfs_dataset.c  libzfs_iter.c
lib/libzfs_core/: Makefile.am  libzfs_core.c
lib/libzpool/: Makefile.am
lib/libzutil/: Makefile.am  zutil_import.c
module/: Kbuild.in  Makefile.bsd
module/nvpair/: nvpair.c
module/zcommon/: zfeature_common.c  zfs_prop.c
module/zfs/: abd.c  arc.c  blkptr.c  dbuf.c  ddt_zap.c  dmu_direct.c  dnode.c  dsl_crypt.c  dsl_dataset.c  dsl_scan.c  spa.c  spa_misc.c  vdev_file.c  zfs_fuid.c  zfs_ioctl.c  zfs_log.c  zfs_sa.c  zfs_vnops.c  zfs_znode.c  zvol.c
module/zstd/: zfs_zstd.c
scripts/: pkg_macos.sh  zfs-tests.sh
tests/runfiles/: common.run  linux.run
(+67 files in other folders)
