# contrib/macOS/Makefile.am

# Ship the script in dist tarballs
EXTRA_DIST = %D%/uninstall-openzfsonosx.sh

# Install it under $(sbindir), which with your prefix becomes /usr/local/zfs/sbin
sbin_SCRIPTS += %D%/uninstall-openzfsonosx.sh
#dist_noinst_DATA  += %D%/uninstall-openzfsonosx.sh.in
#$(call SUBST,uninstall-openzfsonosx.sh,%D%/)

#uninstall-openzfsonosx.sh: %D/uninstall-openzfsonosx.sh
